--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,18 +3,33 @@ html {
 }
 
 body{
-
+    position: relative;
+    background-color: #777777;
 }
 
 header {
+    position: relative;
+    height: 100px;
+    width: 960px;
+    margin: auto;
+    background-color: #ffffff;
 
 }
 
 nav {
+    height: auto;
+    max-width: 960px;
+    margin: 20px 0px 0px 20px;
 
 }
 
 main {
+    height: auto;
+    width: 960px;
+    margin: auto;
+    margin-top: 20px;
+    background-color: #ffffff;
+
 }
 
 footer {
@@ -22,15 +37,52 @@ footer {
 }
 
 h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #4aaaa5;
+    font-size: 40px;
+    padding: 10px;
+}
 
+hr {
+    color: #777777;
+    background-color: #777777;
+    height: 3px;
+    margin: 0px 10px 0px 10px;
+}
+
+#nametag {
+    color: #ffffff;
+    background-color: #4aaaa5;
+    padding: 15px;
+    border: 0px;
+    margin: 0px;
+    width: auto;
+    float: left;
+}
+
+a.pagetags {
+    float: right;
+    padding: 20px;
+    border: 0px;
+    margin: 0px;
+    width: auto;
+    color: #777777;
+    background-color: #ffffff;
 }
 
 p {
+    font-family: Arial, Helvetica, 'Hevetica Neue' sans-serif;
+    color: #777777;
+    font-size: 20px;
+    padding: 5px 20px 5px 20px;
 
 }
 
 img.headshot {
-
+    height: 200px;
+    width: 200px;
+    float: left;
+    margin: 20px;
 }
 
 img.portfolio {
@@ -38,5 +90,5 @@ img.portfolio {
 }
 
 form {
-    
+
 }
