--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
-html {
-
+html { position: relative;
+    Background-color: #777777;
+    
 }
 
 body{
@@ -9,8 +10,8 @@ body{
 
 header {
     position: relative;
-    height: 120px;
-    width: 100%;
+    height: 100px;
+    width: auto;
     margin: auto;
     background-color: #ffffff;
 
@@ -19,7 +20,7 @@ header {
 nav {
     height: 81px;
     max-width: 960px;
-    margin: 20px 0px 0px 20px;
+    margin: auto;
     background-color: #0fb0e0;
 }
 
