--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,3 +128,14 @@ h6.footer {
     background-color: #666666;
     font-size: 10px;
 }
+
+
+div.portfolio {
+    flex-wrap: wrap;
+}
+
+img.portfolio {
+    height: 300px;
+    width: 300px;
+    margin: 20px;
+}
